engine/baml-lib/baml/tests/validation_files/headers/invalid.err
error: Error validating: This line is invalid. It does not start with any known Baml schema keyword.
  -->  tests/validation_files/headers/invalid.baml:11
   | 
10 | 
11 | fn MixedOnSameLine() -> string {
12 |     let x = "hello" ## Inline Header // Should fail
   | 
